dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/Makefile.am) dnl a source file from your sub dir, but acinclude.m4 does the job
AC_CANONICAL_SYSTEM
AC_ARG_PROGRAM

VERSION=`cat ${srcdir}/VERSION`
RPMNAME=`cat ${srcdir}/RPMNAME`
MAINTAINER=`cat ${srcdir}/MAINTAINER`
DOCDIR=/usr/share/doc/packages/$RPMNAME
YAST2DIR=/usr/lib/YaST2
YAST2INC=/usr/include/YaST2

prefix=$YAST2DIR
includedir=$YAST2INC

AM_INIT_AUTOMAKE($RPMNAME, $VERSION) dnl searches for some needed programs

AC_SUBST(VERSION)
AC_SUBST(RPMNAME)
AC_SUBST(MAINTAINER)
AC_SUBST(DOCDIR)
AC_SUBST(YAST2DIR)
AC_SUBST(YAST2INC)

dnl Checks for programs.
AC_PROG_CXX
AC_PROG_AWK
AC_PROG_CC
AC_PROG_CPP
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_PROG_RANLIB

CFLAGS="${CFLAGS} -DY2LOG='\"@RPMNAME@\"' -Wall -Wmissing-prototypes -Wformat"
CXXFLAGS="${CXXFLAGS} -DY2LOG='\"@RPMNAME@\"' -Wall -Wmissing-prototypes -Wformat"

AC_DISABLE_STATIC
AM_PROG_LIBTOOL dnl for libraries

dnl Allow conditionals in .am files
AM_CONDITIONAL(ISIX86, [case `uname -m` in i*86) true;; *) false;; esac])
AM_CONDITIONAL(ISALPHA, test `uname -m` = alpha)
AM_CONDITIONAL(ISSPARC, test `uname -m` = sparc)
AM_CONDITIONAL(ISPPC, test `uname -m` = ppc)

dnl generate the config header
AM_CONFIG_HEADER(config.h) dnl at the distribution this done

AC_DEFINE_UNQUOTED(YAST2HOME, "${YAST2DIR}")

AC_FUNC_ALLOCA
AC_HEADER_STDC

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_C_INLINE

AC_OUTPUT(Makefile
	package/$RPMNAME.spec:$RPMNAME.spec.in
	src/Makefile
	doc/Makefile
	doc/autodocs/Makefile
	conf/Makefile
	testsuite/Makefile)
