#
# Makefile.am for y2c_lilo/src
#

client_DATA =		\
	lilo.ycp	\
	lilo_write.ycp	\
	lilo_auto.ycp

ynclude_DATA =		\
	io.ycp		\
	ui.ycp		\
	routines.ycp	\
	texts.ycp	\
	widgets.ycp	\
	helps.ycp	\
	scan.ycp

config_DATA = lilo.y2cc

module_DATA = Lilo.ycp

EXTRA_DIST = $(client_DATA) $(ynclude_DATA) $(config_DATA) $(module_DATA)
