#
# Makefile.am for bootloader/src
#

client_DATA =			\
	bootloader.ycp		\
	bootloader_auto.ycp	\
	bootloader_proposal.ycp	\
	bootloader_finish.ycp	\
	print-product.ycp	\
	inst_bootloader.ycp	\
	inst_lilo_convert.ycp	\
	bootloader_preupdate.ycp

EXTRA_DIST = 			\
	$(client_DATA)


include $(top_srcdir)/Makefile.am.common
