#
# Makefile.am for bootloader/src
#

yncludedir = @yncludedir@/bootloader/generic

ynclude_DATA =			\
	dialogs.ycp		\
	global_options_widget.ycp	\
	helps.ycp		\
	boot_loader_locations_widget.ycp	\
	section_type_widget.ycp	\
	section_edit_widgets.ycp	\
	section_widgets.ycp	\
	sections_widget.ycp	\
	widget_funcs.ycp	\
	wizards.ycp

EXTRA_DIST = 			\
	$(ynclude_DATA)
