#
# Makefile.am for bootloader/src
#

yncludedir = @yncludedir@/bootloader/routines

ynclude_DATA =			\
	misc.ycp		\
	section_widgets.ycp	\
	global_widgets.ycp	\
	switcher.ycp		\
	helps.ycp		\
	section_helps.ycp       \
	lilolike.ycp		\
	popups.ycp		\
	i386.ycp		\
	lib_iface.ycp		\
	wizards.ycp		\
	dialogs.ycp		\
	autoinstall.ycp		\
	common_options.ycp      \
	common_helps.ycp

EXTRA_DIST = 			\
	$(ynclude_DATA)
