#
# Makefile.am for bootloader/src
#

yncludedir = @yncludedir@/bootloader/ppc

ynclude_DATA =			\
	ppc_widgets.ycp		\
	ppc_global_options_widget.ycp	\
	ppc_boot_loader_locations_widget.ycp	\
	ppc_section_type_widget.ycp	\
	ppc_section_edit_widgets.ycp	\
	ppc_section_widgets.ycp	\
	ppc_sections_widget.ycp	\
	misc.ycp		\
	iseries.ycp		\
	prep.ycp		\
	chrp.ycp		\
	dialogs.ycp		\
	helps.ycp

EXTRA_DIST = 			\
	$(ynclude_DATA)
