#
# Makefile.am for bootloader/src
#

yncludedir = @yncludedir@/bootloader/routines

ynclude_DATA =			\
	misc.ycp		\
	widgets.ycp		\
	options.ycp		\
	switcher.ycp		\
	helps.ycp		\
	ui.ycp			\
	lilolike.ycp		\
	popups.ycp		\
	convert.ycp		\
	routines.ycp		\
	autoinstall.ycp

EXTRA_DIST = 			\
	$(ynclude_DATA)
