#
# Makefile.am for bootloader/src
#

yncludedir = @yncludedir@/bootloader/routines

ynclude_DATA =			\
	misc.ycp		\
	section_widgets.ycp	\
	global_widgets.ycp	\
	switcher.ycp		\
	helps.ycp		\
	lilolike.ycp		\
	popups.ycp		\
	i386.ycp		\
	lib_iface.ycp		\
	wizards.ycp		\
	dialogs.ycp		\
	dialogs_i386.ycp	\
	widgets_i386.ycp	\
	helps_i386.ycp		\
	autoinstall.ycp

EXTRA_DIST = 			\
	$(ynclude_DATA)
